# alibabacloud-rds-openapi-mcp-server-withsso

./: .mcp.json  README.md  README_CN.md  pyproject.toml
skill/: skill_readme.md  skill_readme_cn.md
skill/alibabacloud-rds-copilot/: SKILL.md
skill/alibabacloud-rds-copilot/scripts/: call_rds_ai.py
src/alibabacloud_rds_openapi_mcp_server/: server.py  utils.py
src/alibabacloud_rds_openapi_mcp_server/tools/: aliyun_openapi_gateway.py
